--- a/AmbChat/app/src/main/res/layout/fragment_searchs.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_searchs.xml
@@ -17,17 +17,38 @@
             android:background="@color/colorPrimaryDark"
             android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/txtTitle"
-                android:text="Search"/>
-            <android.support.v7.widget.SearchView
-                android:id="@+id/searchView"
+ <!--           &lt;!&ndash;&lt;!&ndash;<android.support.v7.widget.SearchView&ndash;&gt;
+                &lt;!&ndash;android:id="@+id/searchView"&ndash;&gt;
+                &lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;
+                &lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;
+               &lt;!&ndash;&gt;- &ndash;&gt;
+
+            </android.support.v7.widget.SearchView>-->
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-               >
-            </android.support.v7.widget.SearchView>
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/edtSear"
+                    android:layout_width="183dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginStart="0dp" />
+
+                <ImageButton
+                    android:id="@+id/imgSear"
+                    android:layout_width="62dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="2dp"
+                    android:src="@drawable/ic_search_black_24dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="2dp" />
+            </RelativeLayout>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
