--- a/AmbChat/app/src/main/res/layout/signin.xml
+++ b/AmbChat/app/src/main/res/layout/signin.xml
@@ -6,6 +6,12 @@
     android:id="@+id/rlSignInRoot"
     android:background="#FFF">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFF"
+        android:clickable="false"/>
+
     <LinearLayout
         android:clipChildren="false"
         android:layout_alignParentTop="true"
