--- a/AmbChat/app/src/main/res/layout/signup.xml
+++ b/AmbChat/app/src/main/res/layout/signup.xml
@@ -5,6 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="#FFF">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFF"
+        android:clickable="false"/>
 
     <ScrollView
         android:layout_width="match_parent"
