--- a/AmbChat/app/src/main/res/layout/app_bar_main3.xml
+++ b/AmbChat/app/src/main/res/layout/app_bar_main3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Main2Activity">
+    tools:context=".activities.StartActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
