--- a/AmbChat/app/src/main/res/layout/fragment_searchs.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_searchs.xml
@@ -24,42 +24,42 @@
                &lt;!&ndash;&gt;- &ndash;&gt;
 
             </android.support.v7.widget.SearchView>-->
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
 
                 <EditText
                     android:id="@+id/edtSear"
-                    android:layout_width="183dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginLeft="0dp"
-                    android:layout_marginStart="0dp" />
+                    android:layout_marginStart="0dp"
+                    android:inputType="textPersonName"
+                    android:layout_weight="7"
+                    />
 
                 <ImageButton
                     android:id="@+id/imgSear"
-                    android:layout_width="62dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginEnd="2dp"
                     android:src="@drawable/ic_search_black_24dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="2dp" />
-            </RelativeLayout>
+                    android:layout_marginRight="2dp"
+                    android:layout_weight="3"/>
+            </LinearLayout>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-   <!-- <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="453dp"
-        android:layout_above="@id/bottom"
-        android:layout_below="@id/bar_layout"
-        android:layout_marginTop="10dp" />-->
+
     <ListView
         android:id="@+id/lvResSearchs"
         android:layout_width="match_parent"
