--- a/AmbChat/app/src/main/res/layout/signup.xml
+++ b/AmbChat/app/src/main/res/layout/signup.xml
@@ -57,7 +57,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="4"
                         android:text="@string/fullName"
-                        android:gravity="center"
+                        android:gravity="center|left"
                         android:layout_gravity="left"
                         android:textAppearance="@style/textMedium"
                         android:textColor="@color/black" />
@@ -162,7 +162,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="4"
                         android:text="@string/userName"
-                        android:gravity="center"
+                        android:gravity="center_vertical"
                         android:layout_gravity="left"
                         android:textAppearance="@style/textMedium"
                         android:textColor="@color/black" />
