--- a/AmbChat/app/src/main/res/layout/chat_item_left.xml
+++ b/AmbChat/app/src/main/res/layout/chat_item_left.xml
@@ -20,7 +20,9 @@
         android:id="@+id/show_message"
         android:textSize="18sp"
         android:padding="8dp"
-        android:background="@drawable/background_left"/>
+        android:background="@drawable/background_left"
+        android:layout_toEndOf="@id/profile_image"
+        android:layout_marginStart="5dp" />
 
     <TextView
         android:layout_width="wrap_content"
