--- a/AmbChat/app/src/main/res/drawable/custom.xml
+++ b/AmbChat/app/src/main/res/drawable/custom.xml
@@ -2,25 +2,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid  android:color="@color/colorPrimary">
+    <solid
+        android:color="@color/colorPrimary"
+        >
     </solid>
 
     <corners
-        android:radius="10dp">
+        android:radius="32dp">
     </corners>
 
 
 </shape>
-    <!--
-    <adaptive-icon android:drawable="@drawable/phone"
-        xmlns:android="http://schemas.android.com/apk/res/android"></adaptive-icon>
-    <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorAccent"
-          android:state_pressed="true">
-    </item>
-    <item android:drawable="@color/colorPrimary">
 
-    </item>
-    </selector>
-    -->
 
