--- a/AmbChat/app/src/main/res/layout/fragment_friends.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_friends.xml
@@ -9,8 +9,10 @@
 
     <!--android:divider="@android:color/transparent": xoa ke ngang-->
     <ListView
-       android:id="@+id/lvFriends"
+        android:background="@drawable/background_card_list"
+        android:id="@+id/lvFriends"
+        android:dividerHeight="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@android:color/transparent"></ListView>
+        android:divider="@android:color/transparent" />
 </FrameLayout>
