--- a/AmbChat/app/src/main/res/layout/fragment_info_friend.xml
+++ b/AmbChat/app/src/main/res/layout/fragment_info_friend.xml
@@ -1,190 +1,224 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <LinearLayout
+
+    <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:background="@android:color/white"
+        android:clickable="true"
+        android:focusable="true" />
 
-        <ImageView
-            android:id="@+id/imgAvatar"
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
+
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:scaleType="fitCenter"
-            android:src="@drawable/baseline_person_pin_black_48dp" />
+            android:layout_height="300dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_marginLeft="@dimen/margin"
-            android:layout_marginRight="@dimen/margin"
-            android:layout_weight="1.5"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/padding_username"
-                android:gravity="left|center"
-                android:text="@string/fullName"
-                android:textAppearance="@style/textMedium"
-                android:textColor="@color/black"
-                android:layout_marginStart="@dimen/padding_username" />
-
-            <EditText
-                android:id="@+id/edtFullNameInfor"
+            <android.support.design.widget.CollapsingToolbarLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/margin"
-                android:layout_marginStart="@dimen/margin"
-                android:gravity="left"
-                android:inputType="text"
-                android:text="@string/fullName"
-                android:textAppearance="@style/textMedium" />
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-        <LinearLayout
+                <ImageView
+                    android:id="@+id/imgAvatar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/app_bar_profile_user"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/hinh_nen_dep_5"
+                    app:layout_collapseMode="parallax" />
+
+                <android.support.v7.widget.Toolbar
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/app_bar_profile_user"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@android:color/transparent"
+                    android:theme="@style/AppTheme.AppBarOverlay"
+                    app:layout_collapseMode="pin"
+                    app:subtitleTextColor="#FFF"
+                    app:titleTextColor="#ffffff" />
+            </android.support.design.widget.CollapsingToolbarLayout>
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/scroll"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="left"
-            android:layout_marginLeft="@dimen/margin"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_marginRight="@dimen/margin"
-            android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:layout_gravity="fill_vertical"
+            android:clipToPadding="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <TextView
-                android:layout_width="0dp"
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/padding_username"
-                android:layout_weight="0.5"
-                android:gravity="left"
-                android:text="@string/gender"
-                android:textAppearance="@style/textMedium"
-                android:textColor="@color/black" />
-                <TextView
-                    android:id="@+id/radMaleInfor"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:textAppearance="@style/textMedium"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin"
-                    android:text="@string/male"
-                    android:layout_marginStart="@dimen/margin" />
+                android:layout_marginTop="2dp"
+                app:cardElevation="6dp"
+                app:cardUseCompatPadding="true">
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_marginLeft="@dimen/margin"
-            android:layout_marginRight="@dimen/margin"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/padding_username"
-                android:layout_weight="0.5"
-                android:gravity="left"
-                android:text="@string/birthday"
-                android:textAppearance="@style/textMedium"
-                android:textColor="@color/black"
-                android:layout_marginStart="@dimen/padding_username" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:hint="@string/date"
-                android:textAppearance="@style/textMedium"
-                android:layout_height="wrap_content"
-                android:inputType="date"
-                />
-        </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="@dimen/margin"
+                        android:layout_weight="1.5"
+                        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/margin"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_marginRight="@dimen/margin"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+                        <Button
+                            android:id="@+id/btnAddFriend"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="@dimen/margin"
+                            android:layout_marginRight="@dimen/margin"
+                            android:layout_weight="1"
+                            android:background="@drawable/custom"
+                            android:gravity="center"
+                            android:text="@string/addfr"
+                            android:textAllCaps="true"
+                            android:textAppearance="@style/textMedium"
+                            android:textColor="#ffffff" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/padding_username"
-                android:layout_marginStart="@dimen/padding_username"
-                android:layout_weight="0.4"
-                android:gravity="left"
-                android:text="@string/email"
-                android:textAppearance="@style/textMedium"
-                android:textColor="#000000" />
+                        <Button
+                            android:id="@+id/btnSendMess"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="@dimen/margin"
+                            android:layout_marginRight="@dimen/margin"
+                            android:layout_weight="1"
+                            android:background="@drawable/custom"
+                            android:gravity="center"
+                            android:text="@string/sendmess"
+                            android:textAllCaps="true"
+                            android:textAppearance="@style/textMedium"
+                            android:textColor="#ffffff" />
+                    </LinearLayout>
 
-            <TextView
-                android:id="@+id/txtEmailInfor"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="0.8"
-                android:gravity="left"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"
-                android:textAppearance="@style/textMedium"
-                android:textColor="@color/black" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.5"
-            android:layout_marginTop="@dimen/margin"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/btnAddFriend"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/margin"
-                android:layout_marginRight="@dimen/margin"
-                android:background="@color/colorAccent"
-                android:gravity="center"
-                android:text="@string/addfr"
-                android:textAllCaps="true"
-                android:textAppearance="@style/textMedium"
-                android:textColor="#ffffff" />
-            <Button
-                android:id="@+id/btnSendMess"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/margin"
-                android:layout_marginRight="@dimen/margin"
-                android:background="@color/colorAccent"
-                android:gravity="center"
-                android:text="@string/sendmess"
-                android:textAllCaps="true"
-                android:textAppearance="@style/textMedium"
-                android:textColor="#ffffff" />
-        </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="@dimen/distant_com_sign"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
 
-    </LinearLayout>
-</ScrollView>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="30dp"
+                            android:layout_marginRight="30dp"
+                            android:src="@drawable/ic_cake_black_24dp" />
+
+                        <TextView
+                            android:id="@+id/lblGenderInfo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="@string/male"
+                            android:textAppearance="@style/textMedium" />
+
+
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginRight="20dp"
+                        android:background="#CCC" />
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="@dimen/distant_com_sign"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="30dp"
+                            android:layout_marginRight="30dp"
+                            android:src="@drawable/ic_cake_black_24dp" />
+
+                        <TextView
+                            android:id="@+id/lblBirthDayInfo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="@string/date"
+                            android:textAppearance="@style/textMedium" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginRight="20dp"
+                        android:background="#CCC" />
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="@dimen/distant_com_sign"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="30dp"
+                            android:layout_marginRight="30dp"
+                            android:src="@drawable/ic_email_464646_24dp" />
+
+                        <TextView
+                            android:id="@+id/lblEmailInfo"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="0.8"
+                            android:gravity="start"
+                            android:text="@string/email"
+                            android:textAppearance="@style/textMedium"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
 
