--- a/AmbChat/app/src/main/res/layout/signin.xml
+++ b/AmbChat/app/src/main/res/layout/signin.xml
@@ -1,144 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
     android:id="@+id/rlSignInRoot"
-    android:background="#FFF">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+
+    >
 
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFF"
-        android:clickable="false"/>
+        android:background="@mipmap/back"
+        android:clickable="false" />
 
     <LinearLayout
-        android:clipChildren="false"
-        android:layout_alignParentTop="true"
         android:id="@+id/llSignIn"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:clipChildren="false"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/padding"
+        android:gravity="center_vertical"
         android:paddingLeft="@dimen/margin"
+        android:paddingTop="@dimen/padding"
         android:paddingRight="@dimen/margin"
-        android:paddingTop="@dimen/padding">
+        android:paddingBottom="@dimen/padding">
 
         <ImageView
-            android:id="@+id/imgSignIn"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:src="@mipmap/login" />
+
+        <EditText
+            android:id="@+id/edtUserName"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:background="@color/colorPrimaryDark"
-            android:scaleType="fitCenter"
-            android:src="@drawable/baseline_person_pin_white_48" />
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/shapeemail"
+            android:drawableStart="@drawable/ic_person_black_24dp"
+            android:drawableLeft="@drawable/ic_person_black_24dp"
+            android:drawablePadding="10dp"
+            android:hint="@string/userName"
+            android:inputType="text"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/white"
+            android:textColorHint="@color/white" />
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/edtPass"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_weight="1"
-            android:background="@color/white"
-            android:orientation="horizontal">
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/shapeemail"
+            android:drawableLeft="@drawable/ic_lock_black2_24dp"
+            android:drawablePadding="14dp"
+            android:hint="@string/password_hint"
+            android:inputType="textPassword"
+            android:padding="11dp"
+            android:textColor="@color/white"
+            android:textColorHighlight="@color/white"
+            android:textColorHint="@color/white"
+            android:drawableStart="@drawable/ic_lock_black2_24dp" />
 
-            <ImageView
-                android:id="@+id/imgUserName"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="2"
-                android:scaleType="centerCrop"
-                android:src="@drawable/iconuser" />
-
-            <EditText
-                android:id="@+id/edtUserName"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="9"
-                android:hint="@string/userName"
-                android:inputType="textPersonName"
-                android:padding="@dimen/padding_username"
-                android:textAppearance="@style/textMedium"
-                android:textColor="@color/black" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/id_pass"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgPass"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="2"
-                android:scaleType="centerCrop"
-                android:src="@drawable/iconlock" />
-
-            <EditText
-                android:id="@+id/edtPass"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="9"
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:padding="@dimen/padding_username"
-                android:textAppearance="@style/textMedium"
-                android:textColor="@color/black" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/txtForgotPassword"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="right|center_vertical"
-            android:text="Forgot Password"
-            android:textAllCaps="false"
-            android:textAppearance="@style/textMedium"
-            android:textColor="@android:color/black"
-            android:textStyle="italic" />
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="30dp"
+            android:orientation="horizontal">
 
+            <CheckBox
+                android:id="@+id/ckbRemmemberPass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:padding="8dp"
+                android:gravity="center_vertical"
+                android:text="@string/remember_me"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white" />
 
-        <CheckBox
-            android:id="@+id/ckbRemmemberPass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|center"
-            android:layout_marginLeft="@dimen/margin0"
-            android:layout_marginTop="@dimen/margin"
-            android:text="@string/rememberPassword"
-            android:textAppearance="@style/textMedium"
-            android:textColor="@android:color/black" />
+            <TextView
+                android:id="@+id/txtForgotPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_lock_open_black2_24dp"
+                android:drawablePadding="4dp"
+                android:layout_alignParentEnd="true"
+                android:padding="8dp"
+                android:text="@string/forget_password"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
+                android:drawableStart="@drawable/ic_lock_open_black2_24dp"
+                android:layout_alignParentRight="true" />
+        </RelativeLayout>
 
         <Button
             android:id="@+id/btnLogIn"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_weight="1"
-            android:background="@color/Xam"
-            android:text="@string/logIn"
-            android:textAllCaps="true"
-            android:textAppearance="@style/textLarge"
-            android:textColor="@color/white" />
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/shapelogin"
+            android:padding="15dp"
+            android:shadowColor="@android:color/transparent"
+            android:text="@string/logIn" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="@dimen/imageSize"
             android:orientation="horizontal"
-            android:layout_marginLeft="@dimen/margin0"
-            android:layout_marginTop="@dimen/margin"
-            android:layout_marginStart="@dimen/margin0">
+            >
 
             <TextView
                 android:id="@+id/txtRegisterAcount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|center"
+                android:layout_gravity="start|center"
                 android:text="@string/chuaCoACC"
                 android:textAppearance="@style/textMedium"
                 android:textColor="@android:color/black"
@@ -148,18 +140,14 @@
                 android:id="@+id/txtClickDangKy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left|center"
+                android:layout_gravity="start|center"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
                 android:text="@string/click_dk"
-                android:textStyle="italic"
-                android:textColor="#FF00"
-
                 android:textAppearance="@style/textMedium"
-            />
+                android:textColor="#FFF"
+                android:textStyle="italic|bold" />
 
         </LinearLayout>
-
-
     </LinearLayout>
 </RelativeLayout>
