--- a/AmbChat/app/src/main/res/layout/signup.xml
+++ b/AmbChat/app/src/main/res/layout/signup.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="#FFF">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFF"
-        android:clickable="false"/>
+        android:background="@mipmap/back"
+        android:clickable="false" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,237 +19,180 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin"
-            android:layout_marginRight="@dimen/margin"
             android:layout_marginTop="@dimen/margin"
-            android:orientation="vertical">
+            android:layout_marginRight="@dimen/margin"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
+
+
+            <ImageView
+                android:id="@+id/imgSignUp"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:src="@mipmap/login" />
+
+            <EditText
+                android:id="@+id/edtFullName"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/shapeemail"
+                android:drawableStart="@drawable/ic_person_black_24dp"
+                android:drawableLeft="@drawable/ic_person_black_24dp"
+                android:drawablePadding="10dp"
+                android:hint="@string/fullName"
+                android:inputType="text"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/white"
+                android:textColorHint="@color/white" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="@dimen/distant_com_sign"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/shapeemail"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imgSignUp"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="2"
-                    android:background="@color/Xam"
-                    android:scaleType="center"
-                    android:src="@drawable/baseline_person_pin_white_48" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/txtGender"
+                    android:layout_width="86dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@color/white"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txtFullName"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4"
-                        android:text="@string/fullName"
-                        android:gravity="center|left"
-                        android:layout_gravity="left"
-                        android:textAppearance="@style/textMedium"
-                        android:textColor="@color/black" />
-
-                    <EditText
-                        android:id="@+id/edtFullName"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/margin"
-                        android:layout_marginStart="@dimen/margin"
-                        android:layout_weight="8"
-                        android:inputType="textPersonName"
-                        android:textAppearance="@style/textMedium" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@color/white"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txtGender"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4"
-                        android:text="@string/gender"
-                        android:gravity="center|left"
-                        android:layout_gravity="left"
-                        android:textAppearance="@style/textMedium"
-                        android:textColor="@color/black" />
-
-                    <RadioGroup
-
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="left"
-                        android:layout_marginLeft="@dimen/margin"
-                        android:layout_marginStart="@dimen/margin"
-                        android:layout_weight="8"
-                        android:orientation="horizontal">
-
-                        <RadioButton
-                            android:id="@+id/radMale"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:text="@string/male"
-                            android:textAppearance="@style/textMedium" />
-
-                        <RadioButton
-                            android:id="@+id/radFemail"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="@dimen/margin"
-                            android:layout_marginStart="@dimen/margin"
-                            android:text="@string/female"
-                            android:textAppearance="@style/textMedium" />
-
-                    </RadioGroup>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@color/white"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txtEmail"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4"
-                        android:text="@string/email"
-                        android:gravity="center|left"
-                        android:layout_gravity="left"
-                        android:textAppearance="@style/textMedium"
-                        android:textColor="@color/black" />
-
-                    <EditText
-                        android:id="@+id/edtEmail"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/margin"
-                        android:layout_marginStart="@dimen/margin"
-                        android:layout_weight="8"
-                        android:inputType="textEmailAddress"
-                        android:textAppearance="@style/textMedium" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@color/white"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txtUserName"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4"
-                        android:text="@string/userName"
-                        android:gravity="center_vertical"
-                        android:layout_gravity="left"
-                        android:textAppearance="@style/textMedium"
-                        android:textColor="@color/black" />
-
-                    <EditText
-                        android:id="@+id/edtUserName"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/margin"
-                        android:layout_marginStart="@dimen/margin"
-                        android:layout_weight="8"
-                        android:inputType="textPersonName"
-                        android:textAppearance="@style/textMedium" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@color/white"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txtPassWord"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4"
-                        android:text="@string/password"
-                        android:gravity="center|left"
-                        android:layout_gravity="left"
-                        android:textAppearance="@style/textMedium"
-                        android:textColor="@color/black" />
-
-                    <EditText
-                        android:id="@+id/edtPassWord"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/margin"
-                        android:layout_marginStart="@dimen/margin"
-                        android:layout_weight="8"
-                        android:inputType="textPassword"
-                        android:textAppearance="@style/textMedium" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@color/white"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txtRepeatPass"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="left|center"
-                        android:layout_weight="4"
-                        android:gravity="left|center"
-                        android:text="@string/repeatPassword"
-                        android:textAppearance="@style/textMedium"
-                        android:textColor="@color/black" />
-
-                    <EditText
-                        android:id="@+id/edtRepeatPass"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/margin"
-                        android:layout_marginStart="@dimen/margin"
-                        android:layout_weight="8"
-                        android:inputType="textPassword"
-                        android:textAppearance="@style/textMedium" />
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/btnRegister"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/margin"
-                    android:background="@color/colorPrimaryDark"
-                    android:text="@string/register"
-                    android:textAllCaps="true"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center|start"
+                    android:text="@string/gender"
                     android:textAppearance="@style/textMedium"
                     android:textColor="@color/white" />
+
+                <RadioGroup
+
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="@dimen/margin"
+                    android:layout_marginLeft="@dimen/margin"
+                    android:layout_weight="8"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/radMale"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/male"
+                        android:checked="true"
+                        android:textAppearance="@style/textMedium"
+                        android:textColor="@color/white" />
+
+                    <RadioButton
+                        android:id="@+id/radFemail"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/margin"
+                        android:layout_marginLeft="@dimen/margin"
+                        android:text="@string/female"
+                        android:textAppearance="@style/textMedium"
+                        android:textColor="@color/white" />
+
+                </RadioGroup>
             </LinearLayout>
+
+            <EditText
+                android:id="@+id/edtEmail"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="@dimen/distant_com_sign"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/shapeemail"
+                android:drawableStart="@drawable/ic_email_white_18dp"
+                android:drawableLeft="@drawable/ic_person_black_24dp"
+                android:drawablePadding="10dp"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/white"
+                android:textColorHint="@color/white" />
+
+            <EditText
+                android:id="@+id/edtUserName"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="@dimen/distant_com_sign"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/shapeemail"
+                android:drawableStart="@drawable/ic_person_black_24dp"
+                android:drawableLeft="@drawable/ic_person_black_24dp"
+                android:drawablePadding="10dp"
+                android:hint="@string/userName"
+                android:inputType="textPersonName"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/white"
+                android:textColorHint="@color/white" />
+
+            <EditText
+                android:id="@+id/edtPassWord"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="@dimen/distant_com_sign"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/shapeemail"
+                android:drawableStart="@drawable/ic_lock_black2_24dp"
+                android:drawableLeft="@drawable/ic_person_black_24dp"
+                android:drawablePadding="10dp"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/white"
+                android:textColorHint="@color/white" />
+
+            <EditText
+                android:id="@+id/edtRepeatPass"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="@dimen/distant_com_sign"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/shapeemail"
+                android:drawableStart="@drawable/ic_lock_black2_24dp"
+                android:drawableLeft="@drawable/ic_person_black_24dp"
+                android:drawablePadding="10dp"
+                android:hint="@string/repeatPassword"
+                android:inputType="textPassword"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:textColorHighlight="@color/white"
+                android:textColorHint="@color/white" />
+
+            <Button
+                android:id="@+id/btnRegister"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="@dimen/distant_com_sign"
+                android:layout_marginRight="30dp"
+                android:background="@drawable/shapelogin"
+                android:padding="15dp"
+                android:shadowColor="@android:color/transparent"
+                android:text="@string/register" />
+
         </LinearLayout>
     </ScrollView>
-
-
 </RelativeLayout>
